[tool.black]
line-length = 100
include = '(botocore-stubs)/.*\.pyi?$'
target-version = [
    'py37',
    'py38',
    'py39',
    'py310',
]
preview = true

[tool.isort]
profile = "black"
line_length = 100
src_paths = []

[tool.poetry]
name = "botocore-stubs"
version = "1.29.36"
description = "Type annotations and code completion for botocore"
authors = ["Vlad Emelianov <vlad.emelianov.nz@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://youtype.github.io/mypy_boto3_builder/"
repository = "https://github.com/youtype/botocore-stubs"
documentation = "https://youtype.github.io/mypy_boto3_builder/"
keywords = ["botocore", "type-annotations", "pyright", "mypy", "boto3"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Stubs Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "botocore-stubs" },
]
include = [
    "botocore-stubs/py.typed",
    "botocore-stubs/*.pyi",
    "botocore-stubs/*/*.pyi",
]

[tool.poetry.urls]
"Documentation" = "https://youtype.github.io/mypy_boto3_builder/"
"Source" = "https://github.com/youtype/botocore-stubs"
"Bug Tracker" = "https://github.com/youtype/botocore-stubs/issues"

[tool.poetry.dependencies]
python = "^3.7"
types-awscrt = "*"

[tool.poetry.dev-dependencies]
awscrt = "*"
botocore = "*"
isort = "*"
black = "*"
mypy = "*"
flake8 = "*"
twine = "*"
pyyaml = "*"
istub = "*"
types-requests = "*"
types-python-dateutil = "*"
types-dataclasses = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = [
    "botocore-stubs",
]
exclude = [
    "**/__pycache__",
    "tests",
    "typestubs",
]
reportMissingImports = "error"
reportMissingTypeStubs = false
reportMissingTypeArgument = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportUnknownParameterType = "error"
pythonVersion = "3.7"
